typescript/checker/tests/conformance/es2017/useObjectValuesAndEntries1.ts.stderr
error: NoCallSignature {
    span: Span {
        lo: BytePos(
            150,
        ),
        hi: BytePos(
            158,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es2017/useObjectValuesAndEntries1.ts:10:21
   |
10 | var entries = Object.entries(o);                    // [string, number][]
   |                     ^^^^^^^^

error: NoCallSignature {
    span: Span {
        lo: BytePos(
            224,
        ),
        hi: BytePos(
            231,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es2017/useObjectValuesAndEntries1.ts:11:20
   |
11 | var values = Object.values(o);                      // number[]
   |                    ^^^^^^^

error: NoCallSignature {
    span: Span {
        lo: BytePos(
            293,
        ),
        hi: BytePos(
            301,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es2017/useObjectValuesAndEntries1.ts:13:22
   |
13 | var entries1 = Object.entries(1);                   // [string, any][]
   |                      ^^^^^^^^

error: NoCallSignature {
    span: Span {
        lo: BytePos(
            364,
        ),
        hi: BytePos(
            371,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es2017/useObjectValuesAndEntries1.ts:14:21
   |
14 | var values1 = Object.values(1);                     // any[]
   |                     ^^^^^^^

error: NoCallSignature {
    span: Span {
        lo: BytePos(
            429,
        ),
        hi: BytePos(
            437,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es2017/useObjectValuesAndEntries1.ts:16:22
   |
16 | var entries2 = Object.entries({ a: true, b: 2 });   // [string, number|boolean][]
   |                      ^^^^^^^^

error: NoCallSignature {
    span: Span {
        lo: BytePos(
            511,
        ),
        hi: BytePos(
            518,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es2017/useObjectValuesAndEntries1.ts:17:21
   |
17 | var values2 = Object.values({ a: true, b: 2 });     // (number|boolean)[]
   |                     ^^^^^^^

error: NoCallSignature {
    span: Span {
        lo: BytePos(
            589,
        ),
        hi: BytePos(
            597,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es2017/useObjectValuesAndEntries1.ts:19:22
   |
19 | var entries3 = Object.entries({});                  // [string, {}][]
   |                      ^^^^^^^^

error: NoCallSignature {
    span: Span {
        lo: BytePos(
            659,
        ),
        hi: BytePos(
            666,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es2017/useObjectValuesAndEntries1.ts:20:21
   |
20 | var values3 = Object.values({});                    // {}[]
   |                     ^^^^^^^

error: NoCallSignature {
    span: Span {
        lo: BytePos(
            749,
        ),
        hi: BytePos(
            757,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es2017/useObjectValuesAndEntries1.ts:23:22
   |
23 | var entries4 = Object.entries(a);                   // [string, string][]
   |                      ^^^^^^^^

error: NoCallSignature {
    span: Span {
        lo: BytePos(
            823,
        ),
        hi: BytePos(
            830,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es2017/useObjectValuesAndEntries1.ts:24:21
   |
24 | var values4 = Object.values(a);                     // string[]
   |                     ^^^^^^^

error: NoCallSignature {
    span: Span {
        lo: BytePos(
            908,
        ),
        hi: BytePos(
            916,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es2017/useObjectValuesAndEntries1.ts:27:22
   |
27 | var entries5 = Object.entries(E);                   // [string, any][]
   |                      ^^^^^^^^

error: NoCallSignature {
    span: Span {
        lo: BytePos(
            979,
        ),
        hi: BytePos(
            986,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es2017/useObjectValuesAndEntries1.ts:28:21
   |
28 | var values5 = Object.values(E);                     // any[]
   |                     ^^^^^^^

error: NoCallSignature {
    span: Span {
        lo: BytePos(
            1077,
        ),
        hi: BytePos(
            1085,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es2017/useObjectValuesAndEntries1.ts:32:22
   |
32 | var entries6 = Object.entries(i);                   // [string, any][]
   |                      ^^^^^^^^

error: NoCallSignature {
    span: Span {
        lo: BytePos(
            1148,
        ),
        hi: BytePos(
            1155,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es2017/useObjectValuesAndEntries1.ts:33:21
   |
33 | var values6 = Object.values(i);                     // any[]
   |                     ^^^^^^^

